fix horizontal overflow

--- a/style.css
+++ b/style.css
@@ -26,9 +26,9 @@ body {
 }
 
 .backdrop {
-  overflow: clip;
+  overflow: hidden;
   background-color: #000022;
-  width: 100vw;
+  width: 99vw;
   height: 100vh;
   position: relative;
 }
@@ -116,6 +116,7 @@ main {
   display: flex;
   flex-direction: column;
   position: relative;
+  overflow: hidden;
 
   align-items: center;
   justify-content: center;
